# micro_compiler

./: .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  builtin.cpp  codegen.cpp  compiler  main.cpp
include/: builtin.h  codegen.h  grammar.h
